horizontal scroll and navbar fixed

--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
-/* Apply Roboto Mono to sidebar */
-#sidebar {
-    font-family: 'Roboto Mono', monospace;
-}
-/* Apply Roboto to the rest of the content */
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #E1E1E1;
+    display: flex;
+    flex-direction: row; 
+    overflow-x: auto; 
+    margin: 0; 
+    margin-left: 250px;
 }
 
 .nav-link {
@@ -22,10 +22,44 @@ body {
     background-color: #bdbdbd22;
     color: white;
     width: 100%;
-    font-size:smaller
+    font-size:smaller;
+    margin-top: auto; 
+    padding: 1rem;
+    text-align: center;
 }
 
 .sidebar-hr {
     width: 100%;
     border: 0.05rem solid rgba(255, 255, 255, 0.5);
+}
+
+#sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    flex: 0 0 auto; 
+    width: 250px; 
+    height: 100vh; 
+    display: flex;
+    flex-direction: column; 
+    background-color: #343a40;
+    font-family: 'Roboto Mono', monospace;
+    z-index: 1000;
+}
+
+.content {
+    flex: 1 0 auto;
+    display: flex;
+    gap: 1rem; 
+    padding: 1rem;
+}
+
+.content-item {
+    background-color: white;
+    flex: 0 0 auto; 
+    width: 600px; 
+    height: 400px;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+    border-radius: 50px;
 }
